--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: luigi-scheduler
       dockerfile: Dockerfile
       args:
-      - PYTHON_VERSION=3.7
+      - PYTHON_VERSION=3.8
       - LUIGI_USER=${USER}
       - LUIGI_VERSION=2.8.9
     environment:
@@ -26,6 +26,8 @@ services:
     environment:
       POSTGRES_USER: luigi
       POSTGRES_DB: dev
+
+    restart: always
 
 networks:
   my_net:
